完成了1920屏宽下的css设计，还差theme-style块显示不出来，其他功能完成

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 				<dt>适配</dt>
 			</dl>
 		</nav>
-		<div class="side-nav-legal">东方财富网UED</div>
 	</div>
+	<div class="side-nav-legal">东方财富网UED</div>		
 </div>
 
 
@@ -46,7 +46,14 @@
 	
 </div>
 <div class="right-content">
-	
+	<div id="theme-style">
+		<div id="light">浅色主题</div>
+		<div id="deep">深色主题</div>
+	</div>
+	<div id="totop">
+		<a href="#">
+		<img src="" alt="回到顶部"></a>
+	</div>
 </div>
 </body>
 </html>
