--- a/index2.html
+++ b/index2.html
@@ -3,23 +3,26 @@
 <head>
 	<title></title>
 	<style type="text/css">
-	div{
-		width: 100px;
-		height: 100px;
+	.aa{
+		position: fixed;
+		width:109px;
+		top: 0px;
+		border: 2px solid black;
+		bottom: 10px;
 	}
-	span{
-		display: inline-block;
-		width: 100px;
+	.cc{
+		position: absolute;
+		bottom: 0px;
 		height: 100px;
+		width: 100px;
+		background-color: blue;
 	}
 	</style>
 </head>
-<body>
-<div>sdfds</div>
-<div>34343</div>
-
-<span>sdf</span><span>34</span>
+	
+	<div class="aa">
+		<div class="cc"></div>
+	</div>
+	<div class="bb"></div>
 </body>
 </html>
-
-
