--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>视觉规范</title>
 	<link rel="stylesheet" type="text/css" href="CSS/main.css">
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
+<div class="moudle"></div>
 <div class="side-nav">
 	<div class="side-nav-wrap">
 		<div id = "side-nav-logo">
@@ -19,11 +21,11 @@
 		</div>		
 		<nav>
 			<dl>
-				<dt>Logo</dt>
-				<dt>标准色</dt>
-				<dt>标准字</dt>
-				<dt>图标</dt>
-				<dt>按钮</dt>
+				<dt><a class="nav-item" href="#">Logo</a></dt>
+				<dt><a class="nav-item" href="#">标准色</a></dt>
+				<dt><a class="nav-item" href="#">标准字</a></dt>
+				<dt><a class="nav-item" href="#">图标</a></dt>
+				<dt><a class="nav-item" href="#">按钮</a></dt>
 				<dt>控件</dt>
 				<div class="side-nav-children">
 					<dd>
@@ -31,9 +33,9 @@
 						<a class="nav-child-item" href="#">2</a>
 					</dd>
 				</div>
-				<dt>布局</dt>
-				<dt>命名</dt>
-				<dt>适配</dt>
+				<dt><a class="nav-item" href="#">控件</a></dt>
+				<dt><a class="nav-item" href="#">布局</a></dt>
+				<dt><a class="nav-item" href="#">适配</a></dt>
 			</dl>
 		</nav>
 	</div>
@@ -42,10 +44,15 @@
 
 
 <div class="right-top">
+	<span class="right-top-menu">菜单</span>
 	<span class="right-top-title">移动端视觉规范6.0</span>
 	
 </div>
-<div class="right-content">
+
+<div class="right-content-wrap">
+	<div class="content">
+	</div>
+
 	<div id="theme-style">
 		<div id="light">浅色主题</div>
 		<div id="deep">深色主题</div>
@@ -54,6 +61,9 @@
 		<a href="#">
 		<img src="" alt="回到顶部"></a>
 	</div>
+
+	<div class="footer"></div>
+
 </div>
 </body>
 </html>
