外部添加css样式

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="moudle"></div>
-<div class="side-nav">
+<div id = "side_nav" class="side-nav">
 	<div class="side-nav-wrap">
 		<div id = "side-nav-logo">
 			<img src="images/icon.png">
