填充页面内容，完成页面布局适配

--- a/index.html
+++ b/index.html
@@ -51,9 +51,190 @@
 
 <div class="right-content-wrap">
 	<div class="content">
+	<h2 style="color:#ff5500">标准色</h2>
+	<p>行业背景配合企业文化，与单调乏味的周边环境形成鲜明的对比。引出意想不到且充满活力的配色，限制颜色的数量，在众多基础色中选出三个色度以及一个强调色。</p>
+	<h2>主题</h2>
+	<p>主题是对应用提供一致色调的方法。样式指定了表面的亮度、阴影的层次和字体元素的适当不透明度。为了提高应用间的一致性，提供两种主题选择</p>
+	<input type="checkbox">浅色主题配色
+	<div class="check-colors">
+		<div class="check-colors-title">重要</div>
+		<div class="check-colors-blocks">
+			<div class="check-colors-item-wrap">
+				<div class="check-colors-item" style="background-color:#ff5500">
+					<div class="check-colors-item-detail3" style="color:white">#FF5000</div>
+					<div class="check-colors-item-detail2" style="color:white">(wh_01_01)</div>
+				</div>
+				<p>
+					小面积使用，用于特别需要强调和突出的文字（如与数量相关的人数、点赞、阅读数等）。
+				</p>
+			</div>
+			<div class="check-colors-item-wrap">
+				<div class="check-colors-item" style="background-color:#333333">
+					<div class="check-colors-item-detail3" style="color:white">#FF5000</div>
+					<div class="check-colors-item-detail2" style="color:white">(wh_01_01)</div>
+				</div>
+				<p>
+					用于重要级文字信息、内页标题信息。
+				</p>
+			</div>
+		</div>
+	</div>
+	<div class="check-colors">
+		<div class="check-colors-title">一般</div>
+		<div class="check-colors-blocks">
+			<div class="check-colors-item-wrap">
+				<div class="check-colors-item" style="background-color:#666666">
+					<div class="check-colors-item-detail3" style="color:white">#FF5000</div>
+					<div class="check-colors-item-detail2 style="color:white"">(wh_01_01)</div>
+				</div>
+				<p>
+					用于普通级段落信息、引导词。
+				</p>
+			</div>
+			<div class="check-colors-item-wrap">
+				<div class="check-colors-item" style="background-color:#999999">
+					<div class="check-colors-item-detail3" style="color:white">#FF5000</div>
+					<div class="check-colors-item-detail2" style="color:white">(wh_01_01)</div>
+				</div>
+				<p>
+					用于辅助、次要的文字信息、普通按钮描边。
+				</p>
+			</div>
+			<div class="check-colors-item-wrap">
+				<div class="check-colors-item" style="background-color:#cccccc">
+					<div class="check-colors-item-detail3" style="color:#555555">#FF5000</div>
+					<div class="check-colors-item-detail2" style="color:#555555">(wh_01_01)</div>
+				</div>
+				<p>
+					用于分割线、图片外框描边
+				</p>
+			</div>
+			<div class="check-colors-item-wrap">
+				<div class="check-colors-item" style="background-color:#3381e3">
+					<div class="check-colors-item-detail3" style="color:white">#FF5000</div>
+					<div class="check-colors-item-detail2" style="color:white">(wh_01_01)</div>
+				</div>
+				<p>
+					用于页签、按钮、icon、当前选中菜单和链接文字
+				</p>
+			</div>
+		</div>
+	</div>
+	<div class="check-colors">
+		<div class="check-colors-title">较弱</div>
+		<div class="check-colors-blocks">
+			<div class="check-colors-item-wrap">
+				<div class="check-colors-item" style="background-color:#202020">
+					<div class="check-colors-item-detail3" style="color:white">#FF5000</div>
+					<div class="check-colors-item-detail2" style="color:white">(wh_01_01)</div>
+				</div>
+				<p>
+					用于头部底部导航底色
+				</p>
+			</div>
+			<div class="check-colors-item-wrap">
+				<div class="check-colors-item" style="background-color:#383838">
+					<div class="check-colors-item-detail3" style="color:white">#FF5000</div>
+					<div class="check-colors-item-detail2" style="color:white">(wh_01_01)</div>
+				</div>
+				<p>
+					用于页签非选中状态底色
+				</p>
+			</div>
+			<div class="check-colors-item-wrap">
+				<div class="check-colors-item" style="background-color:#ededed">
+					<div class="check-colors-item-detail3" style="color:#555555">#FF5000</div>
+					<div class="check-colors-item-detail2" style="color:#555555">(wh_01_01)</div>
+				</div>
+				<p>
+					用于页签底色和分割模块底色
+				</p>
+			</div>
+			<div class="check-colors-item-wrap">
+				<div class="check-colors-item" style="background-color:#e6e6e6">
+					<div class="check-colors-item-detail3" style="color:#666666">#FF5000</div>
+					<div class="check-colors-item-detail2" style="color:#666666">(wh_01_01)</div>
+				</div>
+				<p>
+					用于内容区域底色
+				</p>
+			</div>
+		</div>
+	</div>
+	<div class="check-colors">
+		<div class="check-colors-title">走势</div>
+		<div class="check-colors-blocks">
+			<div class="check-colors-item-wrap">
+				<div class="check-colors-item" style="background-color:#d33f25">
+					<div class="check-colors-item-detail3" style="color:white">#FF5000</div>
+					<div class="check-colors-item-detail2" style="color:white">(wh_01_01)</div>
+				</div>
+				<p>
+					用于标示上涨
+				</p>
+			</div>
+			<div class="check-colors-item-wrap">
+				<div class="check-colors-item" style="background-color:#17b03e">
+					<div class="check-colors-item-detail3" style="color:white">#FF5000</div>
+					<div class="check-colors-item-detail2" style="color:white">(wh_01_01)</div>
+				</div>
+				<p>
+					用于标示下跌
+				</p>
+			</div>
+			<div class="check-colors-item-wrap">
+				<div class="check-colors-item" style="background-color:#00ffff">
+					<div class="check-colors-item-detail3" style="color:#666666">#FF5000</div>
+					<div class="check-colors-item-detail2" style="color:#666666">(wh_01_01)</div>
+				</div>
+				<p>
+					用于股票代码
+				</p>
+			</div>
+			<div class="check-colors-item-wrap">
+				<div class="check-colors-item" style="background-color:#ffff52">
+					<div class="check-colors-item-detail3" style="color:#666666">#FF5000</div>
+					<div class="check-colors-item-detail2" style="color:#666666">(wh_01_01)</div>
+				</div>
+				<p>
+					用于标示已添加自选的股票
+				</p>
+			</div>
+		</div>
 	</div>
 
-	<div id="theme-style">
+	
+	<input type="checkbox" checked>深色主题页面配色表
+		<div class="check-colors">
+			<div class="check-colors-title">重要</div>
+			<div class="check-colors-blocks">
+				<div class="check-colors-item-wrap">
+					<div class="check-colors-item" style="background-color:#D33F25">
+						<div class="check-colors-item-detail3" style="color:white">#FF5000</div>
+						<div class="check-colors-item-detail2" style="color:white">(wh_01_01)</div>
+					</div>
+					<p>
+						小面积使用
+					</p>
+				</div>
+				<div class="check-colors-item-wrap">
+					<div class="check-colors-item" style="background-color:#FFFFFF">
+						<div class="check-colors-item-detail3" style="color:#555555">#FF5000</div>
+						<div class="check-colors-item-detail2" style="color:#555555">(wh_01_01)</div>
+					</div>
+					<p>
+						用于重量级文字信息
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="footer"></div>
+
+	</div>
+
+	<div id="theme_style" class="theme-style">
 		<div id="light">浅色主题</div>
 		<div id="deep">深色主题</div>
 	</div>
@@ -62,7 +243,7 @@
 		<img src="" alt="回到顶部"></a>
 	</div>
 
-	<div class="footer"></div>
+	
 
 </div>
 </body>
