--- a/index2.html
+++ b/index2.html
@@ -4,25 +4,23 @@
 	<title></title>
 	<style type="text/css">
 	.aa{
-		position: fixed;
+		position: relative;
 		width:109px;
-		top: 0px;
+		height: 100px;
+		top:100px;
 		border: 2px solid black;
-		bottom: 10px;
 	}
-	.cc{
+	.bb{
 		position: absolute;
-		bottom: 0px;
 		height: 100px;
 		width: 100px;
+		top: 10px;
 		background-color: blue;
 	}
 	</style>
 </head>
-	
 	<div class="aa">
-		<div class="cc"></div>
+		<div class="bb"></div>
 	</div>
-	<div class="bb"></div>
 </body>
 </html>
