实现复制到剪切板，还差对齐，点击出现提示

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="CSS/main.css">
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" src="js/jquery.zclip.js"></script>
 </head>
 <body>
 <div class="moudle"></div>
@@ -59,8 +60,8 @@
 	<div class="check-colors">
 		<div class="check-colors-title">重要</div>
 		<div class="check-colors-blocks">
-			<div class="check-colors-item-wrap">
-				<div class="check-colors-item" style="background-color:#ff5500">
+			<div class="check-colors-item-wrap"  title="#FF5000">
+				<div class="check-colors-item" style="background-color:#ff5500;">
 					<div class="check-colors-item-detail3" style="color:white">#FF5000</div>
 					<div class="check-colors-item-detail2" style="color:white">(wh_01_01)</div>
 				</div>
@@ -69,7 +70,7 @@
 				</p>
 			</div>
 			<div class="check-colors-item-wrap">
-				<div class="check-colors-item" style="background-color:#333333">
+				<div class="check-colors-item" style="background-color:#333333;">
 					<div class="check-colors-item-detail3" style="color:white">#FF5000</div>
 					<div class="check-colors-item-detail2" style="color:white">(wh_01_01)</div>
 				</div>
