--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,12 @@
 		top:100px;
 		border: 2px solid black;
 	}
+
+	.bb:hover{
+		visibility: visible;
+	}
 	.bb{
+		visibility: hidden;
 		position: absolute;
 		height: 100px;
 		width: 100px;
@@ -20,7 +25,10 @@
 	</style>
 </head>
 	<div class="aa">
-		<div class="bb"></div>
+		
+			点击获得色值
+		
+		
 	</div>
 </body>
 </html>
