还需要完成锚的优化，

--- a/color.html
+++ b/color.html
@@ -46,26 +46,31 @@
 
 <div class="right-top">
 	<span class="right-top-menu">菜单</span>
-	<div class="right-top-title">移动端视觉规范6.0</div>
+	<div class="right-top-title">移动端视觉规范6.0</div>	
 	
 </div>
 
 <div class="right-content-wrap">
 	<div class="content">
 	<div id="theme_style" class="theme-style">
-		<div id="light">浅色主题</div>	
-		<div id="deep">深色主题</div>
+		<div id = "vertical_2">
+			<div id = "vertical_item"></div>
+		</div>
+		<div style="display:inline-block; position: absolute; margin-left:3px; top:-0.5em;">
+			<a id="light" class="theme-item" href="#light_theme">浅色主题</a>	
+			<a id="deep" class="theme-item" href="#deep_theme">深色主题</a>
+		</div>
 	</div>
 	<h2 style="color:#ff5500">标准色</h2>
 	<p>行业背景配合企业文化，与单调乏味的周边环境形成鲜明的对比。引出意想不到且充满活力的配色，限制颜色的数量，在众多基础色中选出三个色度以及一个强调色。</p>
 	<h2>主题</h2>
 	<p>主题是对应用提供一致色调的方法。样式指定了表面的亮度、阴影的层次和字体元素的适当不透明度。为了提高应用间的一致性，提供两种主题选择</p>
-	<input type="checkbox">浅色主题配色
+	<input type="checkbox" id="#light_theme">浅色主题配色
 	<div class="check-colors">
 		<div class="check-colors-title">重要</div>
 		<div class="check-colors-blocks">
-			<div class="check-colors-item-wrap"  title="#FF5000">
-				<div class="check-colors-item" style="background-color:#ff5500;">
+			<div class="check-colors-item-wrap"  >
+				<div class="check-colors-item" style="background-color:#ff5500;" title="#FF5000">
 					<div class="check-colors-item-detail3" style="color:white">#FF5000</div>
 					<div class="check-colors-item-detail2" style="color:white">(wh_01_01)</div>
 				</div>
@@ -74,7 +79,7 @@
 				</p>
 			</div>
 			<div class="check-colors-item-wrap">
-				<div class="check-colors-item" style="background-color:#333333;">
+				<div class="check-colors-item" style="background-color:#333333;" title="#333333"> 
 					<div class="check-colors-item-detail3" style="color:white">#333333</div>
 					<div class="check-colors-item-detail2" style="color:white">(wh_01_02)</div>
 				</div>
@@ -88,7 +93,7 @@
 		<div class="check-colors-title">一般</div>
 		<div class="check-colors-blocks">
 			<div class="check-colors-item-wrap">
-				<div class="check-colors-item" style="background-color:#666666">
+				<div class="check-colors-item" style="background-color:#666666" title="#666666">
 					<div class="check-colors-item-detail3" style="color:white">#666666</div>
 					<div class="check-colors-item-detail2 style="color:white"">(wh_02_01)</div>
 				</div>
@@ -97,7 +102,7 @@
 				</p>
 			</div>
 			<div class="check-colors-item-wrap">
-				<div class="check-colors-item" style="background-color:#999999">
+				<div class="check-colors-item" style="background-color:#999999" title="#999999">
 					<div class="check-colors-item-detail3" style="color:white">#999999</div>
 					<div class="check-colors-item-detail2" style="color:white">(wh_02_02)</div>
 				</div>
@@ -106,7 +111,7 @@
 				</p>
 			</div>
 			<div class="check-colors-item-wrap">
-				<div class="check-colors-item" style="background-color:#cccccc">
+				<div class="check-colors-item" style="background-color:#cccccc" title="#cccccc">
 					<div class="check-colors-item-detail3" style="color:#555555">#cccccc</div>
 					<div class="check-colors-item-detail2" style="color:#555555">(wh_02_03)</div>
 				</div>
@@ -115,7 +120,7 @@
 				</p>
 			</div>
 			<div class="check-colors-item-wrap">
-				<div class="check-colors-item" style="background-color:#3381e3">
+				<div class="check-colors-item" style="background-color:#3381e3" title="#3381e3">
 					<div class="check-colors-item-detail3" style="color:white">#3381e3</div>
 					<div class="check-colors-item-detail2" style="color:white">(wh_02_04)</div>
 				</div>
@@ -129,7 +134,7 @@
 		<div class="check-colors-title">较弱</div>
 		<div class="check-colors-blocks">
 			<div class="check-colors-item-wrap">
-				<div class="check-colors-item" style="background-color:#202020">
+				<div class="check-colors-item" style="background-color:#202020" title="#202020">
 					<div class="check-colors-item-detail3" style="color:white">#202020</div>
 					<div class="check-colors-item-detail2" style="color:white">(wh_03_01)</div>
 				</div>
@@ -138,7 +143,7 @@
 				</p>
 			</div>
 			<div class="check-colors-item-wrap">
-				<div class="check-colors-item" style="background-color:#383838">
+				<div class="check-colors-item" style="background-color:#383838" title="#383838">
 					<div class="check-colors-item-detail3" style="color:white">#383838</div>
 					<div class="check-colors-item-detail2" style="color:white">(wh_03_02)</div>
 				</div>
@@ -147,7 +152,7 @@
 				</p>
 			</div>
 			<div class="check-colors-item-wrap">
-				<div class="check-colors-item" style="background-color:#ededed">
+				<div class="check-colors-item" style="background-color:#ededed" title="#ededed">
 					<div class="check-colors-item-detail3" style="color:#555555">#ededed</div>
 					<div class="check-colors-item-detail2" style="color:#555555">(wh_03_03)</div>
 				</div>
@@ -156,7 +161,7 @@
 				</p>
 			</div>
 			<div class="check-colors-item-wrap">
-				<div class="check-colors-item" style="background-color:#e6e6e6">
+				<div class="check-colors-item" style="background-color:#e6e6e6" title="#e6e6e6">
 					<div class="check-colors-item-detail3" style="color:#666666">#e6e6e6</div>
 					<div class="check-colors-item-detail2" style="color:#666666">(wh_03_04)</div>
 				</div>
@@ -169,8 +174,8 @@
 	<div class="check-colors">
 		<div class="check-colors-title">走势</div>
 		<div class="check-colors-blocks">
-			<div class="check-colors-item-wrap">
-				<div class="check-colors-item" style="background-color:#d33f25">
+			<div class="check-colors-item-wrap"> 
+				<div class="check-colors-item" style="background-color:#d33f25" title="#d33f25">
 					<div class="check-colors-item-detail3" style="color:white">#d33f25</div>
 					<div class="check-colors-item-detail2" style="color:white">(wh_04_01)</div>
 				</div>
@@ -179,7 +184,7 @@
 				</p>
 			</div>
 			<div class="check-colors-item-wrap">
-				<div class="check-colors-item" style="background-color:#17b03e">
+				<div class="check-colors-item" style="background-color:#17b03e" title="#17b03e">
 					<div class="check-colors-item-detail3" style="color:white">#17b03e</div>
 					<div class="check-colors-item-detail2" style="color:white">(wh_04_02)</div>
 				</div>
@@ -188,7 +193,7 @@
 				</p>
 			</div>
 			<div class="check-colors-item-wrap">
-				<div class="check-colors-item" style="background-color:#00ffff">
+				<div class="check-colors-item" style="background-color:#00ffff" title="#00ffff">
 					<div class="check-colors-item-detail3" style="color:#666666">#00ffff</div>
 					<div class="check-colors-item-detail2" style="color:#666666">(wh_04_03)</div>
 				</div>
@@ -197,7 +202,7 @@
 				</p>
 			</div>
 			<div class="check-colors-item-wrap">
-				<div class="check-colors-item" style="background-color:#ffff52">
+				<div class="check-colors-item" style="background-color:#ffff52" title="#ffff52">
 					<div class="check-colors-item-detail3" style="color:#666666">#ffff52</div>
 					<div class="check-colors-item-detail2" style="color:#666666">(wh_04_04)</div>
 				</div>
@@ -209,12 +214,12 @@
 	</div>
 
 	
-	<input type="checkbox" checked>深色主题页面配色表
+	<input id = "deep_theme" type="checkbox" checked>深色主题页面配色表
 		<div class="check-colors">
 			<div class="check-colors-title">重要</div>
 			<div class="check-colors-blocks">
 				<div class="check-colors-item-wrap">
-					<div class="check-colors-item" style="background-color:#D33F25">
+					<div class="check-colors-item" style="background-color:#D33F25" title="#D33F25">
 						<div class="check-colors-item-detail3" style="color:white">#d33f25</div>
 						<div class="check-colors-item-detail2" style="color:white">(bl_01_01)</div>
 					</div>
@@ -223,7 +228,7 @@
 					</p>
 				</div>
 				<div class="check-colors-item-wrap">
-					<div class="check-colors-item" style="background-color:#FFFFFF">
+					<div class="check-colors-item" style="background-color:#FFFFFF" title="#FFFFFF">
 						<div class="check-colors-item-detail3" style="color:#555555">#ffffff</div>
 						<div class="check-colors-item-detail2" style="color:#555555">(wh_01_02)</div>
 					</div>
