logo and color finish

--- a/color.html
+++ b/color.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta charset="utf-8">
 	<title>视觉规范</title>
 	<link rel="stylesheet" type="text/css" href="CSS/main.css">
@@ -20,27 +21,28 @@
 				移动端视觉规范
 			</span>
 		</div>		
-		<nav>
+		<nav >
 			<dl>
-				<dt><a class="nav-item" href="/logo.html">Logo</a></dt>
-				<dt><a class="nav-item" style="color:#ff5000" href="/color.html"><img src="images/sanjiao.png">标准色</a></dt>
-				<dt><a class="nav-item" href="#">标准字</a></dt>
-				<dt><a class="nav-item" href="#">图标</a></dt>
-				<dt><a class="nav-item" href="#">按钮</a></dt>
-				<dt><a class="nav-item">控件</a></dt>
+				<dt><a class="nav-item" href="/logo.html"><img class="trangle" src="images/sanjiao.png">Logo</a></dt>
+				<dt><a class="nav-item" style="color:#ff5000" href="/color.html"><img class="trangle" style="visibility:visible" src="images/sanjiao.png">标准色</a></dt>
+				<dt><a class="nav-item" href="#"><img class="trangle" src="images/sanjiao.png">标准字</a></dt>
+				<dt><a class="nav-item" href="#"><img class="trangle" src="images/sanjiao.png">图标</a></dt>
+				<dt><a class="nav-item" href="#"><img class="trangle" src="images/sanjiao.png">按钮</a></dt>
+				<dt><a class="nav-item"> <img class="trangle" src="images/sanjiao.png">控件</a></dt>
 				<div class="side-nav-children">
 					<dd>
-						<a class="nav-child-item" href="#">1</a>
-						<a class="nav-child-item" href="#">2</a>
+						<a class="nav-child-item" href="#"><img class="trangle" src="images/sanjiao.png">1</a>
+						<a class="nav-child-item" href="#"><img class="trangle" src="images/sanjiao.png">2</a>
 					</dd>
 				</div>
-				<dt><a class="nav-item" href="#">布局</a></dt>
-				<dt><a class="nav-item" href="#">命名</a></dt>
-				<dt><a class="nav-item" href="#">适配</a></dt>
+				<dt><a class="nav-item" href="#"><img class="trangle" src="images/sanjiao.png">布局</a></dt>
+				<dt><a class="nav-item" href="#"><img class="trangle" src="images/sanjiao.png">命名</a></dt>
+				<dt><a class="nav-item" href="#"><img class="trangle" src="images/sanjiao.png">适配</a></dt>
 			</dl>
-		</nav>
+		</nav>	
+
 	</div>
-	<div class="side-nav-legal">东方财富网UED</div>		
+	<div class="side-nav-legal">东方财富网UED</div>
 </div>
 
 
@@ -56,8 +58,8 @@
 		<div id = "vertical_2">
 			<div id = "vertical_item"></div>
 		</div>
-		<div style="display:inline-block; position: absolute; margin-left:3px; top:-0.5em;">
-			<a id="light" class="theme-item" href="#light_theme">浅色主题</a>	
+		<div style="display:inline-block; position: absolute; margin-left:3px; top:-0.4em;">
+			<a id="light" class="theme-item" href="#">浅色主题</a>	
 			<a id="deep" class="theme-item" href="#deep_theme">深色主题</a>
 		</div>
 	</div>
@@ -65,12 +67,15 @@
 	<p>行业背景配合企业文化，与单调乏味的周边环境形成鲜明的对比。引出意想不到且充满活力的配色，限制颜色的数量，在众多基础色中选出三个色度以及一个强调色。</p>
 	<h2>主题</h2>
 	<p>主题是对应用提供一致色调的方法。样式指定了表面的亮度、阴影的层次和字体元素的适当不透明度。为了提高应用间的一致性，提供两种主题选择</p>
-	<input type="checkbox" id="#light_theme">浅色主题配色
+	<input type="checkbox" id="light_theme">浅色主题配色
 	<div class="check-colors">
 		<div class="check-colors-title">重要</div>
 		<div class="check-colors-blocks">
 			<div class="check-colors-item-wrap"  >
 				<div class="check-colors-item" style="background-color:#ff5500;" title="#FF5000">
+					<div class="mask">
+						<span class="tips">点击复制色值</span>
+					</div>
 					<div class="check-colors-item-detail3" style="color:white">#FF5000</div>
 					<div class="check-colors-item-detail2" style="color:white">(wh_01_01)</div>
 				</div>
@@ -80,6 +85,9 @@
 			</div>
 			<div class="check-colors-item-wrap">
 				<div class="check-colors-item" style="background-color:#333333;" title="#333333"> 
+					<div class="mask">
+						<span class="tips">点击复制色值</span>
+					</div>
 					<div class="check-colors-item-detail3" style="color:white">#333333</div>
 					<div class="check-colors-item-detail2" style="color:white">(wh_01_02)</div>
 				</div>
@@ -94,8 +102,11 @@
 		<div class="check-colors-blocks">
 			<div class="check-colors-item-wrap">
 				<div class="check-colors-item" style="background-color:#666666" title="#666666">
+					<div class="mask">
+						<span class="tips">点击复制色值</span>
+					</div>
 					<div class="check-colors-item-detail3" style="color:white">#666666</div>
-					<div class="check-colors-item-detail2 style="color:white"">(wh_02_01)</div>
+					<div class="check-colors-item-detail2" style="color:white">(wh_02_01)</div>
 				</div>
 				<p>
 					用于普通级段落信息、引导词。
@@ -103,6 +114,9 @@
 			</div>
 			<div class="check-colors-item-wrap">
 				<div class="check-colors-item" style="background-color:#999999" title="#999999">
+					<div class="mask">
+						<span class="tips">点击复制色值</span>
+					</div>
 					<div class="check-colors-item-detail3" style="color:white">#999999</div>
 					<div class="check-colors-item-detail2" style="color:white">(wh_02_02)</div>
 				</div>
@@ -112,6 +126,9 @@
 			</div>
 			<div class="check-colors-item-wrap">
 				<div class="check-colors-item" style="background-color:#cccccc" title="#cccccc">
+					<div class="mask">
+						<span class="tips">点击复制色值</span>
+					</div>
 					<div class="check-colors-item-detail3" style="color:#555555">#cccccc</div>
 					<div class="check-colors-item-detail2" style="color:#555555">(wh_02_03)</div>
 				</div>
@@ -121,6 +138,9 @@
 			</div>
 			<div class="check-colors-item-wrap">
 				<div class="check-colors-item" style="background-color:#3381e3" title="#3381e3">
+					<div class="mask">
+						<span class="tips">点击复制色值</span>
+					</div>
 					<div class="check-colors-item-detail3" style="color:white">#3381e3</div>
 					<div class="check-colors-item-detail2" style="color:white">(wh_02_04)</div>
 				</div>
@@ -135,6 +155,9 @@
 		<div class="check-colors-blocks">
 			<div class="check-colors-item-wrap">
 				<div class="check-colors-item" style="background-color:#202020" title="#202020">
+					<div class="mask">
+						<span class="tips">点击复制色值</span>
+					</div>
 					<div class="check-colors-item-detail3" style="color:white">#202020</div>
 					<div class="check-colors-item-detail2" style="color:white">(wh_03_01)</div>
 				</div>
@@ -144,6 +167,9 @@
 			</div>
 			<div class="check-colors-item-wrap">
 				<div class="check-colors-item" style="background-color:#383838" title="#383838">
+					<div class="mask">
+						<span class="tips">点击复制色值</span>
+					</div>
 					<div class="check-colors-item-detail3" style="color:white">#383838</div>
 					<div class="check-colors-item-detail2" style="color:white">(wh_03_02)</div>
 				</div>
@@ -153,6 +179,9 @@
 			</div>
 			<div class="check-colors-item-wrap">
 				<div class="check-colors-item" style="background-color:#ededed" title="#ededed">
+					<div class="mask">
+						<span class="tips">点击复制色值</span>
+					</div>
 					<div class="check-colors-item-detail3" style="color:#555555">#ededed</div>
 					<div class="check-colors-item-detail2" style="color:#555555">(wh_03_03)</div>
 				</div>
@@ -162,6 +191,9 @@
 			</div>
 			<div class="check-colors-item-wrap">
 				<div class="check-colors-item" style="background-color:#e6e6e6" title="#e6e6e6">
+					<div class="mask">
+						<span class="tips">点击复制色值</span>
+					</div>
 					<div class="check-colors-item-detail3" style="color:#666666">#e6e6e6</div>
 					<div class="check-colors-item-detail2" style="color:#666666">(wh_03_04)</div>
 				</div>
@@ -176,6 +208,9 @@
 		<div class="check-colors-blocks">
 			<div class="check-colors-item-wrap"> 
 				<div class="check-colors-item" style="background-color:#d33f25" title="#d33f25">
+					<div class="mask">
+						<span class="tips">点击复制色值</span>
+					</div>
 					<div class="check-colors-item-detail3" style="color:white">#d33f25</div>
 					<div class="check-colors-item-detail2" style="color:white">(wh_04_01)</div>
 				</div>
@@ -185,6 +220,9 @@
 			</div>
 			<div class="check-colors-item-wrap">
 				<div class="check-colors-item" style="background-color:#17b03e" title="#17b03e">
+					<div class="mask">
+						<span class="tips">点击复制色值</span>
+					</div>
 					<div class="check-colors-item-detail3" style="color:white">#17b03e</div>
 					<div class="check-colors-item-detail2" style="color:white">(wh_04_02)</div>
 				</div>
@@ -194,6 +232,9 @@
 			</div>
 			<div class="check-colors-item-wrap">
 				<div class="check-colors-item" style="background-color:#00ffff" title="#00ffff">
+					<div class="mask">
+						<span class="tips">点击复制色值</span>
+					</div>
 					<div class="check-colors-item-detail3" style="color:#666666">#00ffff</div>
 					<div class="check-colors-item-detail2" style="color:#666666">(wh_04_03)</div>
 				</div>
@@ -203,6 +244,9 @@
 			</div>
 			<div class="check-colors-item-wrap">
 				<div class="check-colors-item" style="background-color:#ffff52" title="#ffff52">
+					<div class="mask">
+						<span class="tips">点击复制色值</span>
+					</div>
 					<div class="check-colors-item-detail3" style="color:#666666">#ffff52</div>
 					<div class="check-colors-item-detail2" style="color:#666666">(wh_04_04)</div>
 				</div>
@@ -220,6 +264,9 @@
 			<div class="check-colors-blocks">
 				<div class="check-colors-item-wrap">
 					<div class="check-colors-item" style="background-color:#D33F25" title="#D33F25">
+						<div class="mask">
+						<span class="tips">点击复制色值</span>
+					</div>
 						<div class="check-colors-item-detail3" style="color:white">#d33f25</div>
 						<div class="check-colors-item-detail2" style="color:white">(bl_01_01)</div>
 					</div>
@@ -229,6 +276,9 @@
 				</div>
 				<div class="check-colors-item-wrap">
 					<div class="check-colors-item" style="background-color:#FFFFFF" title="#FFFFFF">
+						<div class="mask">
+						<span class="tips">点击复制色值</span>
+						</div>
 						<div class="check-colors-item-detail3" style="color:#555555">#ffffff</div>
 						<div class="check-colors-item-detail2" style="color:#555555">(wh_01_02)</div>
 					</div>
@@ -264,16 +314,12 @@
 		</a>
 	</div>
 
-	</div>
+</div>
 
 	
-	<div id="totop">
+<div id="totop">
 		<a href="#">
 		<img src="" alt="回到顶部"></a>
-	</div>
-
-	
-
 </div>
 </body>
 </html>
