--- a/logo.html
+++ b/logo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta charset="utf-8">
 	<title>视觉规范</title>
 	<link rel="stylesheet" type="text/css" href="CSS/main.css">
@@ -22,25 +23,25 @@
 		</div>		
 		<nav>
 			<dl>
-				<dt><a class="nav-item" style="color:#ff5000" href="/logo.html"><img src="images/sanjiao.png">Logo</a></dt>
-				<dt><a class="nav-item" href="/color.html">标准色</a></dt>
-				<dt><a class="nav-item" href="none">标准字</a></dt>
-				<dt><a class="nav-item" href="#">图标</a></dt>
-				<dt><a class="nav-item" href="#">按钮</a></dt>
-				<dt><a class="nav-item">控件</a></dt>
+				<dt><a class="nav-item"  style="color:#ff5000" href="/logo.html"><img class="trangle"  style="visibility:visible" src="images/sanjiao.png">Logo</a></dt>
+				<dt><a class="nav-item" href="/color.html"><img class="trangle" src="images/sanjiao.png">标准色</a></dt>
+				<dt><a class="nav-item" href="#"><img class="trangle" src="images/sanjiao.png">标准字</a></dt>
+				<dt><a class="nav-item" href="#"><img class="trangle" src="images/sanjiao.png">图标</a></dt>
+				<dt><a class="nav-item" href="#"><img class="trangle" src="images/sanjiao.png">按钮</a></dt>
+				<dt><a class="nav-item"> <img class="trangle" src="images/sanjiao.png">控件</a></dt>
 				<div class="side-nav-children">
 					<dd>
-						<a class="nav-child-item" href="#">1</a>
-						<a class="nav-child-item" href="#">2</a>
+						<a class="nav-child-item" href="#"><img class="trangle" src="images/sanjiao.png">1</a>
+						<a class="nav-child-item" href="#"><img class="trangle" src="images/sanjiao.png">2</a>
 					</dd>
 				</div>
-				<dt><a class="nav-item" href="#">布局</a></dt>
-				<dt><a class="nav-item" href="#">命名</a></dt>
-				<dt><a class="nav-item" href="#">适配</a></dt>
+				<dt><a class="nav-item" href="#"><img class="trangle" src="images/sanjiao.png">布局</a></dt>
+				<dt><a class="nav-item" href="#"><img class="trangle" src="images/sanjiao.png">命名</a></dt>
+				<dt><a class="nav-item" href="#"><img class="trangle" src="images/sanjiao.png">适配</a></dt>
 			</dl>
 		</nav>
 	</div>
-	<div class="side-nav-legal">东方财富网UED</div>		
+	<div class="side-nav-legal">东方财富网UED</div>
 </div>
 
 
@@ -57,7 +58,7 @@
 				<div id="vertical_item"></div>
 			</div>
 			<div style="display:inline-block;position:absolute;margin-left:3px;top:-0.5em">
-				<a id="standerd" class="theme-item" href="#standerd_theme">标准Logo</a>
+				<a id="standerd" class="theme-item" href="#">标准Logo</a>
 				<a id="application" class="theme-item" href="#application_theme">标示应用</a>
 				<a id="download" class="theme-item" href="#download_theme">Icon下载</a>
 			</div>
@@ -80,30 +81,24 @@
 				<p>
 					注：X为一个标准计量单位
 				</p>
-				<img src="images/download_icon.png"><span class="color-light-blue"> 下载矢量Logo</span>
+				<img src="images/download_icon.png"><a class="icons-download"> 下载矢量Logo</a>
 				
 			</div>
-			<img src="images/logo_text&icon.png" class="inline-block-top to-top-30">
+			<img src="images/logo_text&icon.png" class="inline-block-top logo-images">
 		</div>
 
 		<div id="application_theme" class="par">
 			<div class="inline-block-half-left  inline-block-top">
 				<span class="self-h2">标识在不同明度、色相背景中的应用</span>
 				<p>
-					背景色色度、色相规范是标志图形与背景色之间色彩明暗关系规范，直
-					接影响视觉识别度，任何部门或媒体单位不得违背色彩应用的基本原则，
-					任意改变色彩的配格关系。不符合规范的色彩明度范例即为禁止使用的
-					色彩明度范例。
+					背景色色度、色相规范是标志图形与背景色之间色彩明暗关系规范，直接影响视觉识别度，任何部门或媒体单位不得违背色彩应用的基本原则，色彩明度范例。
 				</p>
 				<p>
-					在应用中，应严格参照以上规格，其中应参照搭配原则就是背景色色度
-					越深，标志图形色度越亮，背景色色度越浅，标志图形色度越深，低色
-					度背景+低色度图形和高色度背景+高色度标志图形的搭配形式是被严
-					格禁用。
+					在应用中，应严格参照以上规格，其中应参照搭配原则就是背景色色度越深，标志图形色度越亮，背景色色度越浅，标志图形色度越深，低色度背景+低色度图形和高色度背景+高色度标志图形的搭配形式是被严格禁用。
 				</p>
 				
 			</div>
-			<img src="images/yuan.png">
+			<img src="images/yuan.png" class="logo-images">
 			<div class="inline-block-half-left inline-block-top">
 				<p>
 					各种背景色下的标示用色规定</p>
@@ -111,7 +106,7 @@
 					由于公司产品定性，标示应用严禁与绿色结合。
 				</p>
 			</div>
-			<img src="images/yuan2.png">
+			<img src="images/yuan2.png" class="logo-images">
 			
 		</div>
 
@@ -203,15 +198,14 @@
 					<a class="icons-download" href="">32x32</a>					
 				</div>
 			</div>	
-			<div style="display:inline-block; position:relative; ">
-				<img src="images/em_logo_radius.png">
-			</div>			
+			<img src="images/em_logo_radius.png" class="logo-images">
+
 		</div>
 		
 	</div>
 
 	<div class="footer">
-		<a class="pre">
+		<a class="pre" style="visibility:hidden">
 			<div class="arrow-pre">
 				<img src="images/pre_page.png">
 			</div>
